About/about.css
:root {
    font-size: 20px;
}
/*_____________
Background color
_______________*/
body {
    background-color: rgb(238, 237, 217);
}
/*____________
Header style
_______________*/
header {
    background-color: #5a9e98;
    color: rgb(9, 29, 23);
    padding: 20px 0;
    text-align: center;
}

/*___________________
CSS TO GREETINGS
_______________*/
#greeting {
    text-align: center;
    border: #a5b5b4;
    padding: 30px;
    font-style: oblique;
    margin: 100px 720px;
}

/*________
Morning color according to time
__________*/
.morning {
    background-color: #9ac0e3;
    border: rgb(65, 62, 62);
}

/*______________
afternoon color
___________*/
.afternoon {
    background-color: #3e89ca;
    border: rgb(53, 50, 50);
}

/*________________
evening color
__________*/
.evening {
    background-color: #082a48;
    text-decoration-color: #9ac0e3;
    border: #2d3030;
}

h2 {
    background-color: #5a9e98;
    color:rgb(238, 237, 217);
    padding: 15px;
    width: fit-content;
}

p {
    background-color: #a5b5b4;
    color:rgb(41, 56, 58);
    padding: 20px 0;
    text-align: center;
}

h3 {
    background-color: #6fc9c1;
    color:rgb(238, 237, 217);
    text-align: left;
    width: fit-content;
    padding: 20px 0;
}
/*_______________
Add border and shadows to the images
________________-*/
img {
    border: 4px rgb(52, 92, 88);
    border-style: groove;
    box-shadow: 2px 3px 4px rgb(122, 150, 147);
    padding: 2px;
}

h4 {
    background-color: #3fa0a3;
    color: rgb(217, 237, 238);
    width: fit-content;
    padding: 4px;
    text-align: left;
}

footer {
    text-align: center;
    background-color: rgb(209, 239, 231);
    color: rgb(5, 50, 90);
}

nav a:hover {
    border-radius: 4px;
    background-color: rgb(0, 238, 255);
    color:rgb(2, 30, 42);
}

button { 
    background-color: rgb(238, 198, 220);
    font-size: 20px;
    padding: 30px ;
    margin: 5px;
    cursor: grab;
    text-align: center;
}

